@@ -2,6 +2,8 @@
 v3.2.7-git
 ----------
 
+[mjr] Add database migration for fixing corrupt rule ordering.
+[mjr] Fix corruption of rule order when reordering rules in certain cases.
 
 
 ------
